syntax = "proto3";
package rpc;

import "account.proto";

service RPC {
  rpc GetAll(GetAllRequest) returns (GetAllResponse) {}
}

message GetAllRequest {
  
}

message GetAllResponse {
  repeated account.Account account = 1;
}